# AreteusML

./: .dockerignore  .env.example  .gitignore  CODEBASE.md  Makefile  README.md  artifacts.dvc  data.dvc  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml  model-validation.yml
backend/: Dockerfile
backend/app/: main.py
backend/app/api/routes/: admin.py  feedback.py  model.py  predict.py
backend/app/core/: cache.py  config.py  model_loader.py  security.py
backend/app/middleware/: security_headers.py
backend/app/services/: audit.py  inference.py
backend/tests/: conftest.py  test_api_auth.py  test_api_feedback.py  test_api_model.py  test_api_predict.py  test_cache.py  test_inference.py  test_integration.py  test_security.py
dashboard/: Dockerfile  app.py
dashboard/.streamlit/: config.toml
dashboard/css/: custom.css
dashboard/reports/: evidently_report.html
docs/: PROJECT_WALKTHROUGH.md
docs/decisions/: ADR-001-modernbert.md  ADR-002-dagster.md  ADR-003-onnx.md  ADR-004-pandera.md  ADR-005-streamlit.md
infrastructure/dagster/: workspace.yaml
infrastructure/grafana/dashboards/: api_dashboard.json
infrastructure/mlflow/: Dockerfile
infrastructure/prometheus/: prometheus.yml
ml/: models.dvc
ml/data/: .gitkeep  load_data.py
ml/explainability/: attention_viz.py  shap_analysis.py
ml/notebooks/: 01_eda.ipynb
ml/pipelines/: definitions.py  monitoring_pipeline.py  training_pipeline.py
ml/tests/: conftest.py  test_data_pipeline.py  test_data_validation.py  test_model_export.py  test_training.py
ml/training/: evaluate.py  export_onnx.py  hyperparameter_search.py  labels.py  model_card.py  train.py  train_baseline.py  train_fewshot.py
ml/utils/: __init__.py  reproducibility.py
ml/validation/: data_validator.py  model_validator.py
monitoring/: alerts.py  drift_detection.py  performance_tracker.py
monitoring/reports/: alerts.jsonl
notebooks/: kaggle_train.py
scripts/: generate_current_predictions.py  generate_drift_report.py  generate_reference_predictions.py  run_all.py
